fix z-index profil

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -131,9 +131,14 @@
     z-index: 999;
     justify-content: space-between;
     margin-top: 92px;
+    z-index: -3;
 
     .single-collection-infos {
       margin-top: 50px;
     }
   }
+}
+
+.max-z-index {
+  z-index: 10;
 }
